# nose-tetris

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
game/: colors.py  main.py  roboflow.py  settings.py  shapes.py  tetris.py
game/controls/: __init__.py  base.py  keys.py  nose.py  predictions_helper.py
inference/: roboflow.py
