[tool.poetry]
name = "nose-tetris"
version = "0.1.0"
description = "Tetris controlled by facial features analysis using computer vision"
authors = ["João <joaomarcosxix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
